# postgres

./: meson.build
contrib/: meson.build
contrib/exprs/: Makefile  exprs--1.1.sql  exprs.c  exprs.control  meson.build
contrib/palloc_test/: Makefile  palloc_test--1.1.sql  palloc_test.c  palloc_test.control
contrib/postgres_fdw/: deparse.c  postgres_fdw.c
doc/src/sgml/: catalogs.sgml  ddl.sgml  features.sgml  func.sgml  information_schema.sgml  queries.sgml  reference.sgml  regress.sgml
src/backend/catalog/: Makefile  aclchk.c  dependency.c  heap.c  information_schema.sql  objectaddress.c  pg_class.c  sql_features.txt
src/backend/commands/: Makefile  alter.c  comment.c  dropcmds.c  event_trigger.c  explain.c  meson.build  prepare.c  propgraphcmds.c  seclabel.c  tablecmds.c
src/backend/executor/: execMain.c  nodeHashjoin.c
src/backend/nodes/: bitmapset.c  copyfuncs.c  equalfuncs.c  gen_node_support.pl  nodeFuncs.c  outfuncs.c  queryjumblefuncs.c  readfuncs.c
src/backend/parser/: Makefile  analyze.c  gram.y  meson.build  parse_clause.c  parse_collate.c  parse_expr.c  parse_graphtable.c  parse_relation.c  parse_target.c  scan.l
src/backend/rewrite/: meson.build  rewriteGraphTable.c  rewriteHandler.c
src/backend/tcop/: utility.c
src/fe_utils/: psqlscan.l
src/include/catalog/: Makefile  dependency.h  indexing.h  meson.build  pg_class.h  pg_propgraph_edge.h  pg_propgraph_element.h  pg_propgraph_label.h  pg_propgraph_property.h  pg_propgraph_vertex.h
src/include/commands/: explain.h  propgraphcmds.h
src/interfaces/: Makefile  meson.build
(+72 files in other folders)
